# pipecat-plugins-pinch

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: test_daily_e2e.py  test_livekit_e2e.py
pipecat/plugins/pinch/: __init__.py  log.py  models.py  translator.py
tests/: test_translator.py
