[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-plugins-pinch"
version = "0.1.0"
description = "Pinch real-time speech-to-speech translation plugin for Pipecat"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai>=0.0.50",
    "aiohttp>=3.9.0",
    "livekit>=0.11.0",
    "loguru>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipecat"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
