[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-plugins-pinch"
version = "0.1.0"
description = "Pinch real-time speech-to-speech translation plugin for Pipecat"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Pinch", email = "support@startpinch.com" }]
keywords = [
    "pipecat",
    "translation",
    "speech-to-speech",
    "real-time",
    "pinch",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai>=0.0.50",
    "pinch-sdk>=0.1.1",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
quality = ["numpy>=1.24.0", "soxr>=0.3.7"]

[project.urls]
Homepage = "https://www.startpinch.com"
Documentation = "https://www.startpinch.com/docs"
Repository = "https://github.com/pinch-eng/pipecat-plugins-pinch"
"Bug Tracker" = "https://github.com/pinch-eng/pipecat-plugins-pinch/issues"

[tool.hatch.build.targets.wheel]
packages = ["pipecat"]

[tool.hatch.build.targets.wheel.force-include]
"pipecat/plugins/pinch" = "pipecat/plugins/pinch"

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
